# Product-Quantization-Tree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.cu  tool_createdb.cpp  tool_query.cpp
convert/: convert_bvecs.cpp  convert_fvecs.cpp  convert_ivecs.cpp  dump_bvecs.cpp  filehelper.hpp  helper.hpp
cpu_version/: CMakeLists.txt  Readme.md  filehelper.hpp  helper.hpp  timer.hpp
cpu_version/convert/: bvec_line.cpp  convert_bvecs.cpp  convert_fvecs.cpp  convert_ivecs.cpp
cpu_version/examples/: simple.cpp
cpu_version/iterator/: iterator.hpp  memiterator.hpp
cpu_version/matlab/: ivecs_read.m  make.m  pqt.cxx  readme.md  test.m
cpu_version/quantizer/: productquantizer.hpp  treequantizer.hpp  vectorquantizer.hpp
cpu_version/tools/: build_db.cpp  build_tree.cpp  query.cpp  run.sh
pqt/: PerturbationProTree.cu  ProQuantization.cu  ProQuantization.hh  ProTree.cu  ProductQuantization.hh  VectorQuantization.cu  VectorQuantization.hh  bitonicSort.cu  helper.cu  helper.hh
scripts/: prepare_data.sh
test/: test1B.cpp  testBrute.cpp  testPPQT.cpp  testStatistic.cpp  testSync.cpp  testVQ.cpp
